Todos los detalles de interfaz solucionados y la persistencia corregida