@@ -1,11 +1,17 @@
 package umu.pds.gui.controllers;
 
 import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
 
+import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.scene.control.Alert;
+import javafx.scene.control.ComboBox;
 import javafx.scene.control.Slider;
 import javafx.scene.control.TextField;
+import umu.pds.dto.TableroResponseDTO;
+import umu.pds.dto.ListaTareasResponseDTO;
 import umu.pds.gui.services.api.TableroService;
 import umu.pds.gui.services.GlobalState;
 
@@ -15,10 +21,45 @@ public class CreateListController {
     private TextField listNameField;
     @FXML
     private Slider capacitySlider;
+    @FXML
+    private javafx.scene.control.CheckBox unlimitedCheckbox;
+    @FXML
+    private ComboBox<String> sourceRestrictionCombo;
+    @FXML
+    private javafx.scene.control.Label sliderValueLabel;
+
+    private TableroService tableroService = new TableroService();
 
     @FXML
     public void initialize() {
         System.out.println("Modal de Crear Lista cargado.");
+        if (unlimitedCheckbox != null && capacitySlider != null) {
+            capacitySlider.disableProperty().bind(unlimitedCheckbox.selectedProperty());
+            
+            if (sliderValueLabel != null) {
+                sliderValueLabel.textProperty().bind(capacitySlider.valueProperty().asString("%.0f"));
+                sliderValueLabel.visibleProperty().bind(unlimitedCheckbox.selectedProperty().not());
+                sliderValueLabel.managedProperty().bind(sliderValueLabel.visibleProperty());
+            }
+        }
+
+        loadExistingLists();
+    }
+
+    private void loadExistingLists() {
+        try {
+            String currentBoardId = GlobalState.getInstance().getCurrentBoardId();
+            if (currentBoardId != null) {
+                TableroResponseDTO board = tableroService.getBoard(currentBoardId, GlobalState.getInstance().getUserEmail());
+                List<String> listNames = board.listas().stream()
+                        .map(ListaTareasResponseDTO::nombreLista)
+                        .collect(Collectors.toList());
+                
+                sourceRestrictionCombo.setItems(FXCollections.observableArrayList(listNames));
+            }
+        } catch (Exception e) {
+            System.err.println("Error cargando listas existentes: " + e.getMessage());
+        }
     }
 
     @FXML
@@ -29,10 +70,7 @@ public class CreateListController {
             return;
         }
 
-        System.out.println("Creando lista: " + listName + " con límite " + (int) capacitySlider.getValue());
-
         try {
-            TableroService tableroService = new TableroService();
             String currentBoardId = GlobalState.getInstance().getCurrentBoardId();
 
             if (currentBoardId == null) {
@@ -40,10 +78,24 @@ public class CreateListController {
                 return;
             }
 
-            boolean exito = tableroService.createList(currentBoardId, listName, Collections.emptyList());
+            // Si el checkbox esta marcado, el limite es null (infinito en backend)
+            Integer limite = (unlimitedCheckbox != null && unlimitedCheckbox.isSelected()) ? null : (int) capacitySlider.getValue();
+
+            // Reglas de origen
+            List<String> reglas = Collections.emptyList();
+            String selectedSource = sourceRestrictionCombo.getValue();
+            if (selectedSource != null && !selectedSource.isEmpty()) {
+                reglas = List.of(selectedSource);
+            }
+
+            System.out.println("Creando lista: " + listName + " con límite " + (limite == null ? "Ilimitado" : limite) + " y origen " + selectedSource);
+
+            boolean exito = tableroService.createList(currentBoardId, listName, reglas, limite);
 
             if (exito) {
                 System.out.println("Lista creada exitosamente en la API.");
+                // Tras crear con exito, volver al tablero (esto forzará el refresco)
+                MainLayoutController.getInstance().loadCenterView("BoardWorkspace");
             } else {
                 showAlert("Error API", "La API reportó un fallo al crear la lista.");
             }
@@ -51,9 +103,6 @@ public class CreateListController {
             System.err.println("Error al contactar con la API: " + e.getMessage());
             e.printStackTrace();
         }
-
-        // Tras crear (o al menos notificar), volver al tablero
-        MainLayoutController.getInstance().loadCenterView("BoardWorkspace");
     }
 
     @FXML
